<resources>
    <string name="app_name">MVP model</string>
    <string name="login">Login</string>
    <string name="email">EMAIL</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_successful">Login Successful</string>
    <string name="logout">Logout</string>
</resources>